syntax = "proto3";

option go_package = "github.com/KhoshMaze/khoshmaze-backend/api/pb";

package pb.restaurant;

import "common.proto";
import "menu.proto";

message Restaurant {
    int64 id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
    string url = 3 [json_name = "url"];
    int64 ownerId = 4 [json_name = "ownerId"];
}

message CreateRestaurantRequest {
    string name = 1 [json_name = "name"];
    string url = 2 [json_name = "url"];
}

message CreateBranchRequest {
    int64 restaurantID = 1 [json_name = "restaurantID"];
    string address = 2 [json_name = "address"];
    string phone = 3 [json_name = "phone"];
}

message GetBranchResponse {
    int64 id = 1 [json_name = "id"];
    string address = 2 [json_name = "address"];
    string phone = 3 [json_name = "phone"];
    string restaurant = 4 [json_name = "restaurant"];
    menu.Menu menu = 5 [json_name = "menu"];

}

message GetAllRestaurantsResponse {
    repeated Restaurant restaurants = 1 [json_name = "restaurants"];
    common.Pagination paginationInfo = 2 [json_name = "paginationInfo"];
}
